# pogosyan-fastapi-devops

./: .dockerignore  .gitignore  CHECKLIST.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  Задания от Шарая.txt
.github/workflows/: ci.yml
ansible/: deploy.yml  inventory.example.ini
ansible/group_vars/: all.yml
ansible/templates/: docker-compose.yml.j2
app/: config.py  main.py
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
monitoring/prometheus/: prometheus.yml
terraform/: .terraform.lock.hcl  cloud-init.yaml.tftpl  main.tf  outputs.tf  variables.tf
tests/: test_main.py
